kube/grafana.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
    component: core
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: grafana
        component: core
    spec:
      containers:
      - image: grafana/grafana:6.5.1
        name: grafana
        imagePullPolicy: IfNotPresent
        # env:
        resources:
          # keep request = limit to keep this container in guaranteed class
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 100Mi
        readinessProbe:
          httpGet:
            path: /login
            port: 3000
          # initialDelaySeconds: 30
          # timeoutSeconds: 1
        volumeMounts:
        - name: grafana-storage
          mountPath: /var/lib/grafana
        - name: grafana-datasources-volume
          mountPath: /etc/grafana/provisioning/datasources/
        - name: grafana-dashboards-path-volume
          mountPath: /etc/grafana/provisioning/dashboards/
        - name: grafana-dashboards-volume
          mountPath: /var/lib/grafana/dashboards/
      volumes:
      - name: grafana-storage
        emptyDir: {}
      - name: grafana-datasources-volume
        configMap:
          defaultMode: 420
          name: grafana-datasources
      - name: grafana-dashboards-path-volume
        configMap:
          defaultMode: 420
          name: grafana-dashboards-path
      - name: grafana-dashboards-volume
        configMap:
          defaultMode: 420
          name: grafana-dashboards

---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
    component: core
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: grafana
    component: core
