kube/prometheus-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-proxy
  namespace: monitoring
spec:
  type: LoadBalancer
  selector:
    app: prometheus-proxy
  ports:
  - name: proxy-port
    port: 8080
    targetPort: 8080
  - name: metrics-port
    port: 8082
    targetPort: 8082
  - name: admin-port
    port: 8092
    targetPort: 8092
  - name: agent-grpc-port
    port: 50051
    targetPort: 50051
