kube/prometheus-service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "prometheus"
  namespace: "monitoring"
  labels:
    app: "prometheus-server"
spec:
  type: "LoadBalancer"
  ports:
  - protocol: "TCP"
    port: 9090
    targetPort: 9090
  selector:
    app: "prometheus-server"
