kube/prometheus-proxy-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-proxy-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.global-static-ip-name: prometheus-proxy-ip
spec:
  rules:
  - host: grpc.promproxy.akhbari.us
    http:
      paths:
      - backend:
          serviceName: prometheus-proxy-service
          servicePort: 50051
